fixed width on mobile

--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -11,8 +11,8 @@
     min-width: 300px;    
 }
 .caption {
-    width: 300px;
-    padding-bottom: 20px;
+    width: 270px;
+    margin-bottom: 2px;
     margin-top: 0px;
     margin-left: 0px;
     font-size: 15px;
